[package]
name = 'pty-shell'
version = '0.3.0'
authors = ['Hika Hibariya <hibariya@gmail.com>']
repository = 'https://github.com/hibariya/pty-shell'
homepage = 'https://github.com/hibariya/pty-shell'
license='MIT'
description='Spawn a shell and control it through pty'
keywords = ['pty', 'tty', 'shell', 'terminal']
edition = "2018"

[dependencies]
libc    = "0.2"
mio     = "0.5"
nix     = "0.4"
pty     = "0.2"
termios = "0.2"
failure = "0.1"